--- a/404.html
+++ b/404.html
@@ -27,8 +27,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <div class="navbar__paginas">
-                <a class="nav-link" href="..//pages/novedades.html">novedades</a>
-                <a class="nav-link" href="..//pages/juegos.html">juegos</a>
+                <a class="nav-link" href="..//pages/Novedades.html">novedades</a>
+                <a class="nav-link" href="..//pages/Juegos.html">juegos</a>
                 <a class="nav-link" href="..//pages/como jugar.html">¿cómo jugar?</a>
               </div>
               <div class="navbar__usuario">
