--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="novedades bloque4">
             <div class="titulo-link">
               <h2>novedades</h2>
-              <a class="link--texto" href="pages/novedades.html">Ver todas las novedades →</a>
+              <a class="link--texto" href="pages/Novedades.html">Ver todas las novedades →</a>
             </div>
             <div class="novedad">
               <h3 class="novedad__titulo">tu top 5 para arrancar en este gran mundo</h3>
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col-12 titulo-link">
           <h2>Juegos nuevos</h2>
-          <a class="link--texto" href="pages/juegos.html">Ver todos los juegos →</a>
+          <a class="link--texto" href="pages/Juegos.html">Ver todos los juegos →</a>
         </div>
         <div class="juego-nuevo col-12 col-lg-6">
           <figure class="juego-nuevo__imagen figure">
@@ -203,7 +203,7 @@
     <section class="section-home-links container">
       <div class="row">
         <div class="col-12 col-md-4 home-link">
-          <a class="home-link__link" href="pages/juegos.html">
+          <a class="home-link__link" href="pages/Juegos.html">
             <h3 class="home-link__titulo link--texto">top 10 →</h3>
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
